z-index and the correct font weight

--- a/web/themes/custom/nkh/src/sass/elements/_mobile-alerts.scss
+++ b/web/themes/custom/nkh/src/sass/elements/_mobile-alerts.scss
@@ -3,11 +3,11 @@ button.mobile-alert-button { //the toggle icon
   border-radius: 0;
   display: block;
   padding: 0;
-  z-index: 100;
+  z-index: 1;
   background-color: transparent;
   color: $white;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 700;
   &:hover, &:active, &:focus {
     color: $nkh-lightgrey;
     background-color: transparent;
@@ -42,7 +42,7 @@ button.mobile-alert-button { //the toggle icon
   span,
   span *{
     color: $white;
-    font-weight: 400;
+    font-weight: 300;
     width: 100%;
     text-align: left;
     font-size: 14px;
